changed the text of the right bar'

--- a/app/views/app_lists/show.html.erb
+++ b/app/views/app_lists/show.html.erb
@@ -35,7 +35,7 @@
 		<div class="editer-@job-comments">
 			<div class="grey-text">
 				<i class="icon-list"></i> 
-				Make a note about the <%= @company.name.pluralize %> <%= @job.name %>
+				Make a note about this application 
 			</div>
 			<br />
 			<div class="comment-show" id="comment-area">
