--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -26,7 +26,7 @@
 			<h4> <%= @article.published %></h4></br>
  			
 
-			<div class="article-content">
+			<div class="article-content pad-bottom">
 				<%= simple_format(@article.content) %>
 			</div>			
 		</div>
