--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -6,14 +6,12 @@
 	</div>
 	
 	<div class="right-board-heading">
-		Advice from HR
+		Quotes
 	</div>
 
-	<div class="right-board-info">
-		<b>"Take your time, be organised and thoughtful</b>
-		as you do your applications. Advice here is nice, its calming and 
-		gives legitimacy to the stuff under here"<br />
-		-Joan Grey, HR at WKJames
+	<div class="pad-top pad-bottom">
+		<b>"The safest way to get what you want is to deserve what you want."</b><br />
+		- Charlie Munger, Billionare & Vice-Chairman of Berkshire Hathaway
 	</div>
 	
 	<div class="right-board-heading ">
@@ -21,8 +19,10 @@
 	</div>
 
 	<div class="right-board-info">
-		<b>Standing out in an IB interview</b></br>
-		<p>Lorem Ipsum Doren amintvae asdagaeh dadisein janugunlit</p>
+		<%= link_to "articles/8" do %>
+			<b>How to prepare for Internship season</b></br>
+			<p>Read this article so you don't get overwhelmed in this stressful period</p>
+		<% end %>
 	</div>
 	
 	<div class="right-board-info center-alignment">
@@ -30,8 +30,10 @@
 	</div>
 	
 	<div class="right-board-info">
-		<b>Secondary Helper</b></br>
-		<p>Stuck on cover letters? We have a template</p>
+		<%= link_to "articles/1" do%>
+			<b>Deal Knowledge for for successful interviews</b></br>
+			<p>How to stand out against everyone else that reads the AFR</p>
+		<% end %>
 	</div>
 	
 
