--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -19,7 +19,7 @@
 	</div>
 
 	<div class="right-board-info">
-		<%= link_to "articles/8" do %>
+		<%= link_to "http://www.resquery.com/articles/8" do %>
 			<b>How to prepare for Internship season</b></br>
 			<p>Read this article so you don't get overwhelmed in this stressful period</p>
 		<% end %>
@@ -30,7 +30,7 @@
 	</div>
 	
 	<div class="right-board-info">
-		<%= link_to "articles/1" do%>
+		<%= link_to "http://www.resquery.com/articles/1" do%>
 			<b>Deal Knowledge for for successful interviews</b></br>
 			<p>How to stand out against everyone else that reads the AFR</p>
 		<% end %>
