hid alot of the descriptions

--- a/app/views/companies/_companies.html.erb
+++ b/app/views/companies/_companies.html.erb
@@ -7,7 +7,8 @@
 							 <%= c.jobs.count %> Job Opportunities
 						<% end %><br />
 					<% end %>
-						<%= simple_format( (truncate((c.info), :length=>170)) ) %>
+							<%# simple_format( (truncate((c.info), :length=>170)) ) %>
+					
 						<br />
 				<% end %>
 				
