--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -4,21 +4,9 @@
 		
 		<div class="info-text" id="content-1">
 			
-			<h1>Manage your job applications <strong>easier</strong></h1>
-			<br />
-			<p>"Keeping track of all those companies and jobs without losing all our notes -on
-				a single spreadsheet- was a pain. ResQuery is much better."</p>
-			<br />
-			<div class="row-fluid">
-				<div class="span1">
-					<div class="wrapper">
-					<%= link_to image_tag('spacecamp.jpg'), '#', :class => "wrapper"%>
-					</div>
-				</div>				
-				<div class="span8 info-subtext">
-					Jane is the Y Director at Z Society <br /> and studies BCom/Law at UNSW
-				</div>
-			</div>
+			<h1>Manage your job applications <strong>easier</strong></h1><br/>
+			<h3>ResQuery is a supercharged employer list that keeps
+				you in control of this whole process.</h3>
 		</div>
 		
 		<div class="info-text hide" id="content-2">
