--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -7,27 +7,24 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span8">		
+	<div class="span12">		
 		<% cache @company do %>		
-			<div class="center-alignment pad-bottom">
+			<div class=" pad-bottom">
 				<h3><%= @company.name %></h3>
 					<% if can? :update, @company %>
 						<p><%= link_to 'Edit company details', edit_company_path %></p>
 					<% end %>
-					<%= @company.industry %><br />
-					<%= link_to "#{@company.website}", "http://#{@company.website}" %></br>
 				</div>
 			<div class="top-bottom-borders">
+				<%= @company.industry %><br />
+				<%= link_to "#{@company.website}", "http://#{@company.website}" %></br>
 				HR Email: <%= @company.hr_email %></br>
 			</div>
 			<br />
-			<p><%= simple_format(@company.info) %></p>
+			<p><%# simple_format(@company.info) %></p>
 		
 		
 		<% end %>
-	
-	</div>	
-	<div class="span4">
 		<% if can? :create, @job %>	
 			<%= link_to "Edit Company", edit_company_path %>
 			
@@ -45,9 +42,9 @@
 			
 		<% if @company.has_number_of_jobs > 0 %>
 			<strong> Job opportunities with <%= @company.name %>: </strong></br></br>
-			<ul class="nav nav-pills nav-stacked">
+			<ul class="unstyled">
 				<% @company.has_jobs.each do |job|%>
-					<li><%=link_to	"#{job.name}", job %></li>
+					<li><%=link_to	"#{job.name} - #{job.discipline}", job %></li>
 				<% end %>
 			</ul>
 		<% end %>
