--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -28,17 +28,19 @@
 				<% end %>
 			<% end %>
 			&nbsp
-			Type: <%= Role.find(@job.role_id).role %>
+
 			
 			<hr>		
-				
-			Discipline: <%= Category.find(@job.category_id).discipline %></br>
-			HR Contact: <%= @job.relevant_hr_email %></br>
+			Type: <%= Role.find(@job.role_id).role %><br />			
+			Discipline: <%= Category.find(@job.category_id).discipline %><br />
+			HR Contact: <%= @job.relevant_hr_email %><br />
 			<% if @job.has_website? %>
 				<%= link_to "Official Link", "http://#{@job.link}" %></br></br>
 			<% end %>
 			<hr>
-			<%= simple_format(@job.info) %></br>
+			<% if false %>
+				<%= simple_format(@job.info) %></br>
+			<% end %>
 		<% end %>
 		
 	</div>
