--- a/app/views/dashboards/_new_user_page.html.erb
+++ b/app/views/dashboards/_new_user_page.html.erb
@@ -9,8 +9,10 @@
 
 <%= link_to jobs_path do %>
 	<h4></h4>
-	<p> Start Tracking jobs now! ResQuery is great for reducing the stress and business of job applications
+	<p> Start Tracking jobs now!<br/> ResQuery is great for reducing the stress and business of job applications
 		 by having them all sorted in one place for you </p>
+		
+		<p>Click "Add to dashboard" on one of the jobs to start</p>
 <% end %>
 
 
@@ -29,16 +31,16 @@
 		<% end %>
 	</div>
 	<div class="span6">
-		<h5>Or look up things related to your discipline:</h5>
+		<h5>Things from our knowledge base:</h5>
+		<% Article.all.each do |article| %>
+			<%= link_to  article.title, article  %></br>
+		<% end %>
 
 	</div>
 </div>
 
 
 <div class="row-fluid margin-top">
-	<h5>Things from our knowledge base:</h5>
-	<% Article.all.each do |article| %>
-		<%= link_to  article.title, article  %></br>
-	<% end %>
+
 
 </div>
