--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -42,7 +42,15 @@
 	</div>
 	<div class="menu-area about-area">
 		<ul class="unstyled">
-			<li><i class="icon-comment icon-white"></i> &nbsp Contact Us</li>
+			
+			
+			<li><i class="icon-comment icon-white"></i>
+				&nbsp
+				<%= mail_to "team@resumequery.com", "Contact Us" do %>
+				 	 Contact Us
+				<% end %>
+			</li>
+
 			<%= link_to about_path do %>
 				<li><i class="icon-user icon-white"></i> &nbsp About ResQuery</li>
 			<% end %>
