--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -19,6 +19,13 @@
 		<% end %>
 		<div class="span12">
 			<h1>Knowledge Base </h1></br>
+			
+			<ul>
+				<li> <%= link_to "How to prepare for Internship season", 'articles/8' %> </li>
+				<li> <%= link_to "Resume & Cover Letter Services", 'articles/9' %> </li>
+			<ul>
+			
+			
 			<h4><b> Investing Banking</b></h4>
 			<ul>
 				<li> <%= link_to "How to prepare an M&A Deal for an Investment Banking Interview", 'articles/1' %>  </li>
