added link_to new_problem_path

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -19,5 +19,11 @@
 					</li>
 				<% end %>
 			<% end %>
+		
+		</br>
+		<p>
+			Can't find the job you are looking for, <%= link_to "tell us here", new_problem_path %>
+			
+		
 	</div>
 </div>
