added wording and formatting to advanced search

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,7 +9,8 @@
 <div class="row-fluid">
 	<div class="span10 jobIndex">
 		
-		<%= link_to "Advanced Search", new_search_path %>
+		<b><h4> <%= link_to "Advanced Search", new_search_path %> </h4></b>
+		</br>
 		
 		<ul class="unstyled">
 			<% @jobs.each do |j| %>
