final tweak for industries

--- a/app/views/companies/_companies.html.erb
+++ b/app/views/companies/_companies.html.erb
@@ -2,7 +2,7 @@
 				<% @company.each do |c| %>
 					<%= link_to c do %>
 						<span class="big-font"><strong><%= c.name %></strong> </span><br />
-						<%= c.industry%> -
+						<%= Industry.find(c.industry_id).industry %> -
 						<% if c.has_number_of_jobs != 0 %>
 							 <%= c.jobs.count %> Job Opportunities
 						<% end %><br />
