--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -19,13 +19,17 @@
 			<% end %>
 		</h4>	
 			<hr>
-			<% if current_user.is_following_applist?(@job) %>
-				<span class="label label-inverse">You are following this job</span>
-			<% else %>
-				<%= form_for @appList, :as => :applist do |f|%>
-					<%= f.hidden_field :job_id, :value => params[:id] %>
-					<%= f.submit "Add to Dashboard", :class => "btn btn-info"%>
+			<% if user_signed_in? %>
+				<% if current_user.is_following_applist?(@job) %>
+					<span class="label label-inverse">You are following this job</span>
+				<% else %>
+					<%= form_for @appList, :as => :applist do |f|%>
+						<%= f.hidden_field :job_id, :value => params[:id] %>
+						<%= f.submit "Add to Dashboard", :class => "btn btn-info"%>
+					<% end %>
 				<% end %>
+			<% else %>
+				<%= link_to "Signup", root_path %>
 			<% end %>
 			&nbsp
 
