--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,8 +5,9 @@
 				<ul class="inline">
 					<li><strong>resQuery</strong></li>
 					<li><%= link_to 'About', about_path %></li>
+					<li><%= link_to 'Jobs', jobs_path %></li>
 						<% if false %>
-						<li><%= link_to 'Contact Us' %></li>
+						
 						<li><%= link_to 'Privacy Policy' %></li>
 						<li><%= link_to 'Blog' %></li>				
 						<li><%= link_to 'Twitter' %></li>
