--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,3 +1,8 @@
+<head>
+	<% provide(:title, "#{@job.find_company.name} | #{ @job.name }") %>
+</head>
+
+
 <div class="hierachy">
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
