--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <script type="text/javascript" src="https://gumroad.com/js/gumroad.js"></script>
 
 	<head>
-	  <title>Internship & graduate job application management software: ResQuery</title>
+		<title><%= full_title(yield(:title)) %></title>  
+		<!--><title> Internship & graduate job application management software: ResQuery</title> -->
 	  <%= stylesheet_link_tag    "application", :media => "all" %>
 	  <%= javascript_include_tag "application" %>
 	  <%= csrf_meta_tags %>
