--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,3 +1,6 @@
+<head>
+	<% provide(:title, "#{ @company.name } | #{@company.industry} ") %>
+
 <div class="hierachy">
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
