--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,6 +6,8 @@
 					<li><strong>resQuery</strong></li>
 					<li><%= link_to 'About', about_path %></li>
 					<li><%= link_to 'Jobs', jobs_path %></li>
+					<li><%= link_to 'Companies', companies_path %></li>
+					<li><%= link_to 'Knowledge Base', articles_path %></li>
 						<% if false %>
 						
 						<li><%= link_to 'Privacy Policy' %></li>
