change search back to 'overlay'

--- a/app/views/layouts/_swiftype.html.erb
+++ b/app/views/layouts/_swiftype.html.erb
@@ -9,7 +9,7 @@
     Swiftype.inputElement = '#st-search-input';
     Swiftype.resultContainingElement = '#st-results-container';
     Swiftype.attachElement = '#st-search-input';
-    Swiftype.renderStyle = "inline";
+    Swiftype.renderStyle = "overlay";
 
     var script = document.createElement('script');
     script.type = 'text/javascript';
