--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -10,6 +10,10 @@
 		</div>
 	</div>
 		
+
+
+		<%= render 'layouts/swiftype'%>
+
 		<% @appList.each do |apps| %>
 			<% job = apps.find_job %>
 			<% company = job.find_company %>
