--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,6 +30,15 @@
 		</div>
 	</div>
 </div>
+
+<div class="container">
+	<div class="row">
+		<div class="span12">
+			<%= render 'layouts/swiftype'%>
+		</div>
+	</div>
+</div>
+
 <% if false %>
 <div class="container">
 	<div class="row">
