--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -2,6 +2,7 @@
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
 			<b>Companies List</b>
+			<span class="pull-right"><%= render 'layouts/swiftype'%></span>
 		</div>
 	</div>
 </div>
