--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -7,6 +7,7 @@
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
 			<b>Open Job Opportunities</b>
+			<span class="pull-right"><%= render 'layouts/swiftype'%></span>
 		</div>
 	</div>
 </div>
