--- a/app/views/app_lists/show.html.erb
+++ b/app/views/app_lists/show.html.erb
@@ -2,6 +2,7 @@
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
 			<%= link_to "Dashboard", root_path%> &nbsp >&nbsp <%= @job.name %>
+			<span class="pull-right"><%= render 'layouts/swiftype'%></span>
 		</div>
 	</div>
 </div>
