--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,6 +4,7 @@
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
 			<b>Knowledge Base</b>
+			<span class="pull-right"><%= render 'layouts/swiftype'%></span>
 		</div>
 	</div>
 </div>
