--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,3 +1,9 @@
+<head>
+	<% provide(:title, "Resquery | All Companies") %>
+	<meta property='st:type' content='All Companies ' />
+
+</head>
+
 <div class="hierachy">
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
