--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,6 +1,7 @@
 <head>
 	<% provide(:title, "#{ @company.name } | #{@company.industry} ") %>
-
+	 <meta property='st:type' content='Company Profile ' />
+</head>
 <div class="hierachy">
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
