--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,5 +1,7 @@
 <head>
 	<% provide(:title, "#{@job.find_company.name} | #{ @job.name }") %>
+		<meta property='st:type' content='Job Opening' />
+		 <meta property='st:info' content="Discipline: <% "#{Category.find(@job.category_id).discipline}" %>" />
 </head>
 
 
