--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,5 +1,5 @@
 <head>
-	<% provide(:title, "#{ @company.name } | #{@company.industry} ") %>
+	<% provide(:title, "#{ @company.name } | #{Industry.find(@company.industry_id).industry} ") %>
 	 <meta property='st:type' content='Company Profile ' />
 </head>
 <div class="hierachy">
