--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
 
 Do Not delete Categories<p>
 
-<%= link_to "New Category", categories_new_path %>
+<%= link_to "New Category", new_category_path %>
 
 <br><% @categories.each do |f| %> </br>
 	<li> <%= f.discipline %> <%= f.id %></li>
