--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -37,18 +37,20 @@
 		<% if user_signed_in?%>
 			<% if can? :create, @job %>	
 				<%= link_to "Edit Company", edit_company_path %>
+					<legend>Create a job</legend>
+					<%= form_for @jobs, :as => :jobs do |f| %>
+						<%= f.text_field :name, :placeholder => "Name" %>
+						<%= f.collection_select :category_id, Category.order(:discipline), :id, :discipline %></br>
+						<%= f.text_field :info, :placeholder => "Information" %>
+						<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY"%>
+						<%= f.hidden_field :id, :value => params[:id] %>
+						<%= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true %>
+						<%= f.text_field :location, :placeholder => "Location" %>
+						<%= f.submit %>
+					<% end %>
+				<% end %>
 		<% end 	%>	
-			<legend>Create a job</legend>
-			<%= form_for @jobs, :as => :jobs do |f| %>
-				<%= f.text_field :name, :placeholder => "Name" %>
-				<%= f.collection_select :category_id, Category.order(:discipline), :id, :discipline %></br>
-				<%= f.text_field :info, :placeholder => "Information" %>
-				<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY"%>
-				<%= f.hidden_field :id, :value => params[:id] %>
-				<%= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true %>
-				<%= f.submit %>
-			<% end %>
-		<% end %>
+			
 			
 		<% if @company.has_number_of_jobs > 0 %>
 			<strong> Job opportunities with <%= @company.name %>: </strong></br></br>
