--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -43,6 +43,7 @@
 						<%= f.collection_select :category_id, Category.order(:discipline), :id, :discipline %></br>
 						<%= f.text_field :info, :placeholder => "Information" %>
 						<%= f.text_field :due_date, :placeholder => "Date, insert as DD/MM/YYYY"%>
+						<%= f.text_field :link, :placeholder => "Website Link in www.something.com form" %></br>
 						<%= f.hidden_field :id, :value => params[:id] %>
 						<%= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true %>
 						<%= f.text_field :location, :placeholder => "Location" %>
