follow / unfollow working - unfollow jquery not working

--- a/app/views/companies/_unfollow_company_form.html.erb
+++ b/app/views/companies/_unfollow_company_form.html.erb
@@ -1,3 +1,9 @@
-<%= form_for(current_user.follows.find_by_company_id(@company), html: { method: :delete }, remote: true) do |f| %>
-		<%= f.submit "Unfollow", class: "btn btn-large btn-primary"%>
+<%= form_for(current_user.follows.find_by_company_id(@company), method: :delete , remote: true) do |f| %>
+		<%= f.submit "Unfollow", class: "btn btn-large btn-primary" %>
 	<% end %>
+
+<%= link_to "Unfollow", current_user.follows.find_by_company_id(@company), method: :delete %>
+
+<%# form_for(current_user.follows.find_by_company_id(@company), method: :delete, remote: true) do |f| %>
+		<%# f.submit "Unfollow", class: "btn btn-large btn-primary"%>
+	<%# end %>
