--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -18,8 +18,21 @@
 				<%= link_to j do %>
 					<li><strong><%= j.find_company.name %></strong> - <%= j.name %>  
 					<span class="pull-right"><%= j.show_due_date%></span>
+						<div id = "add_to_dashboard">
+											
+				<% end %>		
+				</div>
+						<%#= form_for @appList, :as => :applist do |f|%>
+							<%#= f.hidden_field :job_id, :value => params[:id] %>
+							<%#= f.submit "Add to Dashboard", :class => "btn btn-info"%>
+				
+					
+					<%= form_for(current_user.app_lists.build, :as => :applist) do |f| %>
+						<%= f.hidden_field :job_id, :value => j.id %>
+						<%= f.submit "Add to Dashboard" %>
 					</li>
-				<% end %>
+					<% end %>
+				
 			<% end %>
 		
 		</br>
