add follow / unfollow button on companies#index

--- a/app/views/companies/_companies.html.erb
+++ b/app/views/companies/_companies.html.erb
@@ -6,10 +6,30 @@
 						<% if c.has_number_of_jobs != 0 %>
 							 <%= c.jobs.count %> Job Opportunities
 						<% end %><br />
+						
+
 					<% end %>
-							<%# simple_format( (truncate((c.info), :length=>170)) ) %>
-					
+							<div id = 'follow_company'>
+							<% if current_user.following?(c) %>
+								<%= form_for(current_user.follows.find_by_company_id(c), remote: true, method: :delete) do |f| %>
+									<%= f.submit "Unfollow", class: "btn btn-large btn-primary" %>
+								<% end %>
+								
+							<% else %>
+								<%= form_for(current_user.follows.build, remote: true) do |f| %>
+									<%= f.hidden_field :company_id, :value => c.id %>
+								<%= f.submit "Follow", class: "btn btn-large btn-primary" %>
+								
+								<% end %>
+						
+							<% end %>							
+							</div>
 						<br />
 				<% end %>
 				
 				<%= will_paginate @company %>
+
+
+
+
+				
