--- a/app/views/companies/_follow_company.html.erb
+++ b/app/views/companies/_follow_company.html.erb
@@ -1,5 +1,5 @@
 
-<div id = "follow_company">
+<div id = "follow_company1">
 	<% if current_user.following?(@company) %>
 			<%= render 'unfollow_company_form' %>
 	<% else %>
