--- a/app/views/follows/create.js.erb
+++ b/app/views/follows/create.js.erb
@@ -1,1 +1,1 @@
-$("#follow_company").html("<%= escape_javascript(render('companies/unfollow_company_form')) %>")
+$("#follow_form").html("<%= escape_javascript(render('companies/unfollow')) %>")
