--- a/app/views/follows/destroy.js.erb
+++ b/app/views/follows/destroy.js.erb
@@ -1,1 +1,1 @@
-$("#follow_company").html("<%= escape_javascript(render('companies/follow_company_form')) %>")
+$("#follow_form").html("<%= escape_javascript(render('companies/follow')) %>")
