--- a/app/views/layouts/_swiftype.html.erb
+++ b/app/views/layouts/_swiftype.html.erb
@@ -1,5 +1,5 @@
 <form>
-  <input type="text" id="st-search-input" class="st-search-input" />
+  <input type="text" id="st-search-input" class="st-search-input" placeholder="Search for Jobs, Companies" />
 </form>
 <div id="st-results-container"></div>
 <script type="text/javascript">
