changed wording of dashboard, to my jobs

--- a/app/views/app_lists/show.html.erb
+++ b/app/views/app_lists/show.html.erb
@@ -1,7 +1,7 @@
 <div class="hierachy">
 	<div class="row-fluid">
 		<div class="span12 bottom-border">
-			<%= link_to "Dashboard", root_path%> &nbsp >&nbsp <%= @job.name %>
+			<%= link_to "My Jobs", root_path%> &nbsp >&nbsp <%= @job.name %>
 			<span class="pull-right"><%= render 'layouts/swiftype'%></span>
 		</div>
 	</div>
