--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -8,10 +8,10 @@
 	<div class="menu-area">
 		<ul class="unstyled">
 			<%= link_to root_path do %>
-				<li><i class="icon-pencil icon-white"></i> &nbsp Apps Dashboard</li>
+				<li><i class="icon-pencil icon-white"></i> &nbsp My Jobs</li>
 			<% end %>
 			<%= link_to jobs_path do %>
-				<li><i class="icon-briefcase icon-white"></i> &nbsp  Jobs </li>
+				<li><i class="icon-briefcase icon-white"></i> &nbsp  Job Opportunities </li>
 			<% end %>
 			<%= link_to companies_path do %>
 				<li><i class="icon-certificate icon-white"></i> &nbsp Companies </li>
