--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -408,3 +408,12 @@ input[type='checkbox'] {
 .st-search-input{
 	margin:0px !important;
 }
+
+.label-list{
+	padding:9px 5px;
+	width:114px;
+	text-align:center;
+	margin-bottom: $standard-padding;
+
+
+}
