changed contact us button

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -410,10 +410,10 @@ input[type='checkbox'] {
 }
 
 .label-list{
-	padding:9px 5px;
+	padding:7px 5px;
 	width:114px;
 	text-align:center;
 	margin-bottom: $standard-padding;
-
+	border: 1px solid $dark-green;
 
 }
