--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -46,7 +46,7 @@
 			
 			<li><i class="icon-comment icon-white"></i>
 				&nbsp
-				<%= mail_to "team@resumequery.com", "Contact Us" do %>
+				<%= mail_to "team@resquery.com", "Contact Us" do %>
 				 	 Contact Us
 				<% end %>
 			</li>
