--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -417,3 +417,8 @@ input[type='checkbox'] {
 	border: 1px solid $dark-green;
 
 }
+
+.negative-margin{
+	margin-left:-20px;
+	margin-right:-20px;
+}
