--- a/app/views/app_lists/show.html.erb
+++ b/app/views/app_lists/show.html.erb
@@ -9,15 +9,18 @@
 
 <div class="editer" id="edit-line-<%=@appList.id%>">
 	<div class="editer-header">
-		<h4><%= @job.name %></h4>
-			<%= @company.name %> - Closes <%= @job.show_due_date %></br>
-			<%= link_to "Website", "http://#{@company.website}" %>
-	</div>
-		
-	<div class="row-fluid pad-top">
-		<div class="span12 top-border">	
-			<div class="row-fluid">
+		<div class="container-fluid negative-margin ">
+			<div class="row-fluid ">
+				<div class="span8">
+					<h4><%= @job.name %></h4>
+						<%= @company.name %> - Closes <%= @job.show_due_date %></br>
+						<%= link_to "Website", "http://#{@company.website}" %>
+				</div>
 				<div class="span4">
+					<div class="pull-right red-text appManage-status pad-bottom">
+						Status: <%= @appList.status %>
+					</div>
+
 					<%= form_for @appList, :as => :applist, remote: true do |f| %>
 						<%= f.select :status, [['Research'], ['Writing Application'],
 											['Submitted & Waiting'],['Testing'],
@@ -30,9 +33,9 @@
 		</div>
 	</div>
 </div>
-			
-<div class="row-fluid">
-	<div class="span12 editer-main">
+		
+<div class="row-fluid top-border">
+	<div class="span12 editer-main pad-top">
 		<div class="editer-@job-comments">
 			<div class="grey-text">
 				<i class="icon-list"></i> 
