empty dashboard changes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -143,6 +143,10 @@ input[type='checkbox'] {
 	border-top:$standard-line;
 }
 
+.right-border{
+	border-right:$standard-line;
+}
+
 .margin-top{
 	margin-top:60px;
 }
