--- a/app/views/companies/_companies.html.erb
+++ b/app/views/companies/_companies.html.erb
@@ -1,21 +1,13 @@
-
-				<% @company.each do |c| %>
-					<%= link_to c do %>
-						<span class="big-font"><strong><%= c.name %></strong> </span><br />
-						<%= Industry.find(c.industry_id).industry %> -
-						<% if c.has_number_of_jobs != 0 %>
-							 <%= c.jobs.count %> Job Opportunities
-						<% end %><br />
-						
-
-					<% end %>
-						<%= render :partial => 'companies/follow_form', :locals => {:c => c} %>
-						<br />
-				<% end %>
+<% @company.each do |c| %>
+	<%= link_to c do %>
+		<span class="big-font"><strong><%= c.name %></strong> </span><br />
+		<%= Industry.find(c.industry_id).industry %> 
+		<% if c.has_number_of_jobs != 0 %>
+			 <%= c.jobs.count %> Job Opportunities
+		<% end %><br />				
+	<% end %>
+	<%= render :partial => 'companies/follow_form', :locals => {:c => c} %>
+	<br />
+<% end %>
 				
-				<%= will_paginate @company %>
-
-
-
-
-				
+<%= will_paginate @company %>
