--- a/app/views/companies/_follow_form.html.erb
+++ b/app/views/companies/_follow_form.html.erb
@@ -1,4 +1,4 @@
-<div id = 'follow_form'>
+<div id = "follow_form_<%= c.id %>">
 	<% if current_user.following?(c) %>
 		<%= render :partial => 'companies/unfollow', :locals => {:c => c}, :sid => 0 %>
 	<% else %>
