--- a/app/views/follows/create.js.erb
+++ b/app/views/follows/create.js.erb
@@ -1,1 +1,1 @@
-$("#follow_form").html("<%= escape_javascript(render('companies/unfollow')) %>")
+$("#follow_form_<%= c.id %>").html("<%= escape_javascript(render('companies/unfollow')) %>");
