--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -430,3 +430,10 @@ input[type='checkbox'] {
 .follow-button{
 	width:81px !important;
 }
+
+.info-text {
+	h1{
+	font-size:46px;
+	line-height:55px;
+	}
+}
