--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -2,14 +2,14 @@
 	<div class="info-message">	
 		
 	<div class="info-text center-alignment">	
-		<h1>Organise your job applications <strong>easier</strong></h1><br/>		
+		<h1>Your own personalised  space to coach you through your job applications</h1><br/>		
 	</div>
 		
 		<div class="info-text center-alignment" id="content-1">
 			
 
-			<h3>All <%= Job.count %> Sydney grad and internship jobs in one place,
-					curated for you.</h3>
+			<h3>ResQuery turns the <%= Job.count %> reputable grad and internship jobs in Sydney into
+				opportunities for you, instead of stresses.</h3>
 		</div>
 		
 	<% if false %>	
