--- a/app/views/industries/index.html.erb
+++ b/app/views/industries/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Industries#index</h1>
 
-<%= link_to "New Industry", industries_new_path %>
+<%= link_to "New Industry", industries_path %>
 
 <br><% @industries.each do |f| %> </br>
 	<li> <%= f.industry %> <%= f.id %></li>
