adjust admin page

--- a/app/views/dashboards/admin.html.erb
+++ b/app/views/dashboards/admin.html.erb
@@ -72,12 +72,12 @@
 				</tr>
 				<% @company.each do |company| %>
 					<tr>
-						<td><%= company.name %></td>
+						<td><%= link_to "#{company.name}", company %></td>
 						<td><%= company.follows.count %></td>
 					</tr>
 				<% end %>
 				</table>
-				</br>
+				</br	>
 					
 			
 			
@@ -91,12 +91,7 @@
 		<ul>
 			<li><strong>LINKS - Remove when admin set up</strong></li>
 			<li><%= link_to 'Problems-Page', problems_path %></li>
-			<li>Companies:</li>
-			<ul>
-				<% Company.all.each do |company| %>
-					<li><%= link_to "#{company.name}", company %></li>
-				<% end %>
-			</ul>
+			
 			<li><%= link_to 'New company page', new_company_path %>
 		</ul>
 	</div>			
