--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -33,7 +33,7 @@
 				<% else %>
 					<%= form_for @appList, :as => :applist do |f|%>
 						<%= f.hidden_field :job_id, :value => params[:id] %>
-						<%= f.submit "Add to Dashboard", :class => "btn btn-info"%>
+						<%= f.submit "Add to My Jobs", :class => "btn btn-info"%>
 					<% end %>
 				<% end %>
 			<% else %>
