--- a/app/views/dashboards/admin.html.erb
+++ b/app/views/dashboards/admin.html.erb
@@ -78,9 +78,29 @@
 				<% end %>
 				</table>
 				</br	>
-					
-			
-			
+				
+				<ul>
+				<% @list.each do |user|%>	
+					<li><%= user.first_name %> - <%= user.email%></li>
+							<table cellpadding="10">
+								<tr>
+									<th> Company </th>
+									<th> Job </th>
+									<th> Due Date </th>
+									<th> Status </th>
+								</tr>	
+							<% user.app_lists.each do |applists| %>
+								<tr>
+									<td> <%= Company.find(Job.find_by_id(applists.job_id).company_id).name %> </td>
+									<td> <%= Job.find_by_id(applists.job_id).name %> </td>
+									<td> <%= Job.find_by_id(applists.job_id).show_due_date %> </td>
+									<td> <%= applists.status %> <% if applists.status.blank? %> Not Started <% end %> </td>
+								</tr>
+								<% end %>
+							</table>
+				<% end %>
+				</ul>
+							
 			
 		</div>
 	</div>
