linked Status to app manage page

--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -31,9 +31,11 @@
 					</div>
 
 					<div class="span3">
-						<div class="pull-right red-text appManage-status">
-							<%= apps.status %>
-						</div>	
+						<%= link_to apps do %> 
+							<div class="pull-right red-text appManage-status">
+								<%= apps.status %> 
+							</div>	
+						<% end %>
 					</div>
 
 					<div class="span1">
