added edit links to jobs index on admin page

--- a/app/views/dashboards/admin.html.erb
+++ b/app/views/dashboards/admin.html.erb
@@ -50,7 +50,9 @@
 				<tr>
 					<th> Company </th>
 					<th> Job </th>
+					<th> Link </th>
 					<th> Users following </th>
+					<th> Edit </th>
 
 				</tr>
 			
@@ -58,7 +60,9 @@
 				<tr>
 					<td><%= list.find_company.name %></td>
 					<td><%= list.name %> </td>
+					<td><%= link_to "Link", list.link %>
 					<td><%= list.app_lists.count %> </td>
+					<td><%= link_to "Edit", edit_job_path(list) %>
 
 				</tr>
 				<% end %>
