edited links on dashboard

--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -39,7 +39,7 @@
 					</div>
 
 					<div class="span1">
-						<%= link_to "Website", company.website %>
+						<%= link_to "Website", "http://#{company.website}" %>
 					</div>
 
 					<div class="span3">
