--- a/app/views/staticpages/about.html.erb
+++ b/app/views/staticpages/about.html.erb
@@ -8,13 +8,16 @@
 		<div class="span12">
 			<div class="listCopy">
 			<div class="sellingpoints">
-				<h4>ResQuery uses what works to separate you from the rest</h4>
-				<p>The information we put onto our website is based
-					off what has worked for other applicants in the past, 
-					continuously updated with relevant information - not
-					just HR speak</p>
+						
+				<h4>All your graduate and internships applications in one place </h4>
+				
+				<p> With all your job applications on one-page and friendly email reminders, never worry about missing deadlines again.</p>
 				</br>
-				</br> 
+
+				<h4>ResQuery remembers everything so you don't have to </h4>
+				
+				<p> With all your job applications on one-page and friendly email reminders, never worry about missing deadlines again.</p>
+				</br>
 			
 			</div>
 			</div>
