on dashboard, clicking website link opens a new tab now

--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -35,7 +35,7 @@
 					</div>
 
 					<div class="span1">
-						<%= link_to "Website", "http://#{job.link}" %>
+						<%= link_to "Website", "http://#{job.link}", :target => "_blank" %>
 					</div>
 
 					<div class="span3">
