--- a/app/views/layouts/_right-board.html.erb
+++ b/app/views/layouts/_right-board.html.erb
@@ -25,9 +25,11 @@
 		<% end %>
 	</div>
 	
+	<% if false%>
 	<div class="right-board-info center-alignment">
 		<%= link_to "The ResQuery Investment Banking Cover Letter Template that works", "https://gumroad.com/l/IBcoverletter", :class=>"btn btn-info"%>
 	</div>
+	<% end %>
 	
 	<div class="right-board-info">
 		<%= link_to "http://www.resquery.com/articles/1" do%>
