--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -16,9 +16,9 @@
 			<%= link_to companies_path do %>
 				<li><i class="icon-certificate icon-white"></i> &nbsp Companies </li>
 			<% end %>
-			<%= link_to knowledgebase_path do %>
-				<li><i class="icon-book icon-white"></i> &nbsp Knowledge Base</li>
-			<% end %>
+			<%#= link_to knowledgebase_path do %>
+			<!--	<li><i class="icon-book icon-white"></i> &nbsp Knowledge Base</li> -->
+			<%# end %>
 			<%= link_to suggestions_path do %>	
 				<li><i class="icon-wrench icon-white"></i> &nbsp Suggestions & Bugs</li>
 			<% end %>
