modified about page

--- a/app/views/staticpages/about.html.erb
+++ b/app/views/staticpages/about.html.erb
@@ -8,16 +8,34 @@
 		<div class="span12">
 			<div class="listCopy">
 			<div class="sellingpoints">
-						
-				<h4>All your graduate and internships applications in one place </h4>
 				
-				<p> With all your job applications on one-page and friendly email reminders, never worry about missing deadlines again.</p>
+				<div class= 'span8'>
+				<b><h2> About ResQuery </h2></b>
+								
+				ResQuery is a free service for students, to take control and keep organised during graduate and internship applications.
+				<p></br>
+				ResQuery was born after two UNSW students felt there had to be a better way of juggling jobs apps than using a large cumbersome excel file.	
+				<p></br>
+		
+				<% if false%>
+				
+				<h5>All your graduate and internships applications in one place </h5>
+				
+				<p> ResQuery collates all your job opportunities in one place. And with one-click add jobs to your 'My Jobs" basket and stay organised</p>
 				</br>
 
-				<h4>ResQuery remembers everything so you don't have to </h4>
+				<h5>ResQuery remembers everything so you don't have to </h5>
 				
 				<p> With all your job applications on one-page and friendly email reminders, never worry about missing deadlines again.</p>
 				</br>
+				
+				<h5>Follow your favourite companies to receive updates </h5>
+				
+				<p> ResQuery will automatically notify you when your favourite companies have released new jobs, taking the stress out of hunting them down</p>
+				</br>
+				<% end %>
+				
+				</div>
 			
 			</div>
 			</div>
